Corrected reading object from locations.json